--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                 <input type="email" name="_replyto" id="cd-email" class="email" placeholder="Email" required>
               </div>
               <div class="icon">
-                <textarea name="message" rows="5" cols="66" placeholder="Votre message..." id="cd-textarea" class="message" required></textarea>
+                <textarea name="message" rows="5" cols="66" placeholder="Votre message..." id="cd-textarea" class="message" required ><input type="hidden" name="_next" value="//site.io/thanks.html" /></textarea>
               </div>  
               <input type="submit" value="Envoyer">
               <input type="hidden" name="_next" value="#">
