--- a/index.html
+++ b/index.html
@@ -302,10 +302,10 @@
                 <input type="email" name="_replyto" id="cd-email" class="email" placeholder="Email" required>
               </div>
               <div class="icon">
-                <textarea name="message" rows="5" cols="66" placeholder="Votre message..." id="cd-textarea" class="message" required ><input type="hidden" name="_next" value="//site.io/thanks.html" /></textarea>
+                <textarea name="message" rows="5" cols="66" placeholder="Votre message..." id="cd-textarea" class="message" required ></textarea>
               </div>  
               <input type="submit" value="Envoyer">
-              <input type="hidden" name="_next" value="#">
+              <input type="hidden" name="_next" value="http://site.io/thanks.html">
             </fieldset>
           </form>
         </div>
