--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                 <textarea name="message" rows="5" cols="66" placeholder="Votre message..." id="cd-textarea" class="message" required ></textarea>
               </div>  
               <input type="submit" value="Envoyer">
-              <input type="hidden" name="_next" value="http://site.io/thanks.html">
+              <input type="hidden" name="_next" value="http://edouardarchmbd.github.io/solenn/#contact">
             </fieldset>
           </form>
         </div>
