--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid --> <!-- Navbar -->
         </nav>
- 
+        
         <div id="wrapper">
-            <h1 id="h1">Solenn Archimbaud</h1>
-            <hr>
-            <h2 class="h2">Responsable Marketing Opérationnel</h2><br>
-            <div class="spacer"></div><div id="object" class="floating"><a href="#presentation"><i class="fa fa-angle-double-down fa-3x"></i></a></div>
+            <div class="col-xs-12">
+              <h1 id="h1">Solenn Archimbaud</h1>
+              <hr>
+              <h2 class="h2">Responsable Marketing Opérationnel</h2><br>
+              <div class="spacer"></div><div id="object" class="floating"><a href="#presentation"><i class="fa fa-angle-double-down fa-3x"></i></a></div>
+            </div>
         </div>
 
       <div class="spacer"></div>
@@ -287,10 +289,16 @@
       <div id="contact">
           <h3>Contact</h3>
           <hr>
-          <ul class='list-inline space-contact'>
-            <li><p><i class="fa fa-home fa-2x"></i>  Paris 17ème</p></li>
-            <li><p><i class="fa fa-mobile fa-2x"></i>  06 61 13 77 73</p></li>
-          </ul>
+          <div class="mini-spacer"></div>
+          <div class="col-xs-12 col-md-4">
+            <p><i class="fa fa-home fa-2x"></i><br>Paris, 17ème</p>
+          </div>
+          <div class="col-xs-12 col-md-4">
+            <p><i class="fa fa-mobile fa-2x"></i><br>06 61 13 77 73</p>
+          </div>
+          <div class="col-xs-12 col-md-4">
+            <p><i class="fa fa-envelope-o fa-2x"></i><br>sarchimbaud@gmail.com<br>(ou bien le formulaire ci-dessous)</p>
+          </div>
 
          <div class="col-xs-12">
           <fieldset>
