--- a/index.html
+++ b/index.html
@@ -45,14 +45,18 @@
           </div><!-- /.container-fluid --> <!-- Navbar -->
         </nav>
         
-        <div id="wrapper">
-            <div class="col-xs-12">
-              <h1 id="h1">Solenn Archimbaud</h1>
-              <hr>
-              <h2 class="h2">Responsable Marketing Opérationnel</h2><br>
-              <div class="spacer"></div><div id="object" class="floating"><a href="#presentation"><i class="fa fa-angle-double-down fa-3x"></i></a></div>
-            </div>
+      <div id="wrapper">
+        <div class="container">
+          <div class="row">
+              <div class="col-xs-12">
+                <h1 id="h1">Solenn Archimbaud</h1>
+                <hr>
+                <h2 class="h2">Responsable Marketing Opérationnel</h2><br>
+                <div class="spacer"></div><div id="object" class="floating"><a href="#presentation"><i class="fa fa-angle-double-down fa-3x"></i></a></div>
+              </div>
+          </div>
         </div>
+      </div>
 
       <div class="spacer"></div>
 
