--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/animations.css">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Open+Sans+Condensed:300|Poiret+One' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Poiret+One' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/style.css">
   </head>
 
@@ -132,7 +132,8 @@
                   </div> <!-- cd-timeline-img -->
 
                   <div class="cd-timeline-content">
-                    <h2>Congé parental</h2><h6>| Participation dans l’association de parents d’élèves</h6>
+                    <h2>Congé parental</h2>
+                    <p>Participation dans l’association de parents d’élèves</p>
                     <span class="cd-date">2012 - 2014</span>
                   </div> <!-- cd-timeline-content -->
                 </div> <!-- cd-timeline-block -->
