Modification de contenue

--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
           <div class="col-xs-12 col-md-4">
             <h3>Présentation</h3>
             <hr>
-            <p class="txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lacinia lectus erat, id ullamcorper libero tempor vitae. Curabitur congue venenatis ipsum et elementum. Sed tristique turpis id diam vestibulum pretium. Donec lectus massa, bibendum molestie luctus ut, dignissim id ex.
-            </p>
+            <p class="txt">Forte d’un excellent relationnel, notamment du à mes 10 ans d’expérience, dont 8 en Marketing Opérationnel et près de 5 en institutions, je suis curieuse, rigoureuse et dotée d’une très bonne capacité d’adaptation.</p>
           </div>
         </div>
 
@@ -221,16 +220,17 @@
             <div id="comp">
               <h3>Compétences</h3>
               <hr>
-              <p id="txtcomp">Grâce à ma formation de gestion d'entreprise, je maîtrise Microsoft Office et les progiciels actuels. De plus, en loisir et par l'envie de décourvir de nouvelles choses, je sais également manipuler des logiciels de création, comme Adobe Photoshop.</p>
+              <p id="txtcomp">Ces compétences ont été acquises aussi bien par des formations spécifiques qu'à l'usage, tout au long de mes différentes expériences professionnelles.</p>
 
                 <div class="col-xs-12 col-md-6">
                   <h4><i class="fa fa-check-circle"></i> Informatique</h4>
                    <ul class="ul-space">
+                    <li>Photoshop</li>
+                    <li>Sagai</li>
                     <li>SalesLogix</li>
                      <li>KDP Vente Partner</li>
                      <li>Sarbacane</li>
                      <li>Microsoft Office</li>
-                     <li>Photoshop</li>
                    </ul>
                 </div>
 
